min-height on footer to avoid cutting off content with a small browser height

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -214,7 +214,7 @@ body {
 
 .footer {
   width: 100%;
-  height: 15%;
+  min-height: 15%;
   background: $grey;
   position: fixed;
   bottom: 0;
